--- a/navigation_oobb/name_base/width_4/height_5/thickness_3/working.yaml
+++ b/navigation_oobb/name_base/width_4/height_5/thickness_3/working.yaml
@@ -10,7 +10,9 @@ kwargs:
   height: 5
   modes:
   - 3dpr
-  overwrite: true
+  - laser
+  - 'true'
+  overwrite: false
   save_type: all
   thickness: 3
   type: test_base
