--- a/navigation_oobb/name_base/width_6/height_7/thickness_3/working.yaml
+++ b/navigation_oobb/name_base/width_6/height_7/thickness_3/working.yaml
@@ -11,7 +11,9 @@ kwargs:
   height: 7
   modes:
   - 3dpr
-  overwrite: true
+  - laser
+  - 'true'
+  overwrite: false
   save_type: all
   thickness: 3
   type: test_base
