--- a/scad_output/oobb_test_base_04_05_03/working.yaml
+++ b/scad_output/oobb_test_base_04_05_03/working.yaml
@@ -10,7 +10,9 @@ kwargs:
   height: 5
   modes:
   - 3dpr
-  overwrite: true
+  - laser
+  - 'true'
+  overwrite: false
   save_type: all
   thickness: 3
   type: test_base
