--- a/scad_output/oobb_test_base_05_06_03_ex_electronic_breakout_board_mcu_pico_robotic_42_mm_width_64_mm_height_green_pcb/working.yaml
+++ b/scad_output/oobb_test_base_05_06_03_ex_electronic_breakout_board_mcu_pico_robotic_42_mm_width_64_mm_height_green_pcb/working.yaml
@@ -11,7 +11,9 @@ kwargs:
   height: 6
   modes:
   - 3dpr
-  overwrite: true
+  - laser
+  - 'true'
+  overwrite: false
   save_type: all
   thickness: 3
   type: test_base
