--- a/scad_output/oobb_test_base_06_07_03_ex_electronic_breakout_board_mcu_pico_screw_terminal_55_mm_width_73_mm_height_purple_pcb/working.yaml
+++ b/scad_output/oobb_test_base_06_07_03_ex_electronic_breakout_board_mcu_pico_screw_terminal_55_mm_width_73_mm_height_purple_pcb/working.yaml
@@ -11,7 +11,9 @@ kwargs:
   height: 7
   modes:
   - 3dpr
-  overwrite: true
+  - laser
+  - 'true'
+  overwrite: false
   save_type: all
   thickness: 3
   type: test_base
